fix project overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -992,13 +992,12 @@ nav #nav-ul-wrapper ul::before {
 
   position: absolute;
   inset: 0;
+  pointer-events: auto;
 
   background: linear-gradient(to top left, black, black, rgb(111, 111, 111));
-  
   border-top-left-radius: 111px;
   border-bottom-left-radius: 55px;
   border-bottom-right-radius: 33px;
-
   opacity: 0.7;
 
   z-index: 0;
@@ -1272,6 +1271,10 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
   transform: translateY(8px) scale(1.3);
 }
 
+#projects {
+  overflow-x: hidden;
+}
+
 #projects .section-header-container h3::before {
   box-shadow: 0 0 1em var(--clr-neon-blue);
 }
@@ -1325,7 +1328,6 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
   position: relative;
 
   transition: all 0.55s ease-in-out;
-
   z-index: 1;
 }
 
@@ -1765,6 +1767,10 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
 
   #about #avatar-container {
     padding: 0 28vw;
+  }
+
+  #projects {
+  overflow-x: initial;
   }
 
   #projects .project-stack {
